[project]
name = "airflow-keep"
dynamic = ["version"]
description = "A custom Airflow provider for Keep alert management platform"
authors = [{ name = "tuan.tran", email = "tntuan0910@gmail.com" }]
readme = "README.md"
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
keywords = ["airflow", "providers", "keep"]
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.0",
    "apache-airflow-providers-fab>=1.5.3",
    "apache-airflow-providers-sqlite>=4.0.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "reorder-python-imports>=3.14.0",
]

[project.urls]
source = "https://github.com/tuantran0910/airflow-keep/"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airflow_keep"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"

[project.entry-points."apache_airflow_provider"]
provider_info = "providers.keep.get_provider_info:get_provider_info"
